--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "next-sc",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "bin": {
     "next-sc": "./generate-app.js"
   },
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.js"
+    "test": "console.log('test')"
   },
   "repository": {
     "type": "git",
@@ -20,9 +19,6 @@
     "url": "https://github.com/NikolaStanchev28/next-sc/issues"
   },
   "homepage": "https://github.com/NikolaStanchev28/next-sc#readme",
-  "devDependencies": {
-    "parcel-bundler": "^1.12.5"
-  },
   "dependencies": {
     "rimraf": "^3.0.2"
   }
